<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud_primary"
    android:theme="@style/LoginTheme"
    tools:context=".LoginActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="390dp"
        android:background="#3F5AED"
        android:gravity="center_vertical"
        app:boxBackgroundColor="#3F5AED"
        app:boxStrokeColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/user_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_primary"
            android:hint="@string/user_hint"
            android:textColor="#000000"
            android:textColorLink="#000000" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="390dp"
        android:background="@drawable/backgroud_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/user"
        app:layout_constraintStart_toStartOf="@+id/user"
        app:layout_constraintTop_toBottomOf="@+id/user">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroud_primary"
            android:hint="@string/password_hint"
            android:textColorHighlight="#000000"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#000000"
            tools:layout_editor_absoluteX="70dp"
            tools:layout_editor_absoluteY="224dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/title_login"
        android:textColorHighlight="#000000"
        android:textColorLink="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/botonSubirArchivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="270dp"
        android:background="#2B54BC"
        android:shadowColor="#673AB7"
        android:text="@string/text_button_login"
        app:backgroundTint="#2B54BC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#673AB7"
        app:strokeColor="#020202" />


</androidx.constraintlayout.widget.ConstraintLayout>